--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO = ''
+MONGO = 'mongodb+srv://smohamadth:3221647mo@tolive.akxpggx.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'mohamad'
